[package]
name = "ble-collector-rs"
version = "0.1.0"
authors = ["deploy"]
edition = "2018"

[dependencies]
ble-advert-struct = { git = "https://github.com/miek/ble-advert-struct.git" }
rumble = { git = "https://github.com/miek/rumble.git", branch = "scan-options" }
rumqtt = "0.30.1"
serde_json = "1.0.39"
